@@ -163,6 +163,7 @@ EPICSCAM    = 28
 EPIX10KA    = 29
 UXI         = 30
 PIXIS       = 31
+EPIX10KA2M  = 32
 
 #XAMPS    # N/A data
 #FEXAMP   # N/A data
@@ -175,14 +176,14 @@ PIXIS       = 31
 list_of_det_type = (UNDEFINED, CSPAD, CSPAD2X2, PRINCETON, PNCCD, TM6740, \
                     OPAL1000, OPAL2000, OPAL4000, OPAL8000, \
                     ORCAFL40, EPIX, EPIX10K, EPIX100A, FCCD960, ANDOR, ACQIRIS, IMP, QUARTZ4A150, RAYONIX,
-                    EVR, FCCD, TIMEPIX, FLI, PIMAX, ANDOR3D, JUNGFRAU, ZYLA, EPICSCAM, EPIX10KA, UXI, PIXIS)
+                    EVR, FCCD, TIMEPIX, FLI, PIMAX, ANDOR3D, JUNGFRAU, ZYLA, EPICSCAM, EPIX10KA, UXI, PIXIS, EPIX10KA2M)
 
 """ List of enumetated detector types"""
 
 list_of_det_names = ('UNDEFINED', 'Cspad', 'Cspad2x2', 'Princeton', 'pnCCD', 'Tm6740', \
                      'Opal1000', 'Opal2000', 'Opal4000', 'Opal8000', \
                      'OrcaFl40', 'Epix', 'Epix10k', 'Epix100a', 'Fccd960', 'Andor', 'Acqiris', 'Imp', 'Quartz4A150', 'Rayonix',\
-                     'Evr', 'Fccd', 'Timepix', 'Fli', 'Pimax', 'Andor3d', 'Jungfrau', 'Zyla', 'ControlsCamera', 'Epix10ka', 'Uxi', 'Pixis')
+                     'Evr', 'Fccd', 'Timepix', 'Fli', 'Pimax', 'Andor3d', 'Jungfrau', 'Zyla', 'ControlsCamera', 'Epix10ka', 'Uxi', 'Pixis', 'Epix10ka2M')
 
 """ List of enumetated detector names"""
 
@@ -218,6 +219,7 @@ list_of_calib_groups = ('UNDEFINED',
                         'Epix10ka::CalibV1',
                         'Uxi::CalibV1',
                         'Pixis::CalibV1',
+                        'Epix10ka2M::CalibV1',
                         )
 """ List of enumetated detector calibration groups"""
 
@@ -330,6 +332,7 @@ def det_type_from_source(source) :
     elif ':Epix10ka.'       in str_src : return EPIX10KA
     elif ':Uxi.'            in str_src : return UXI
     elif ':Pixis.'          in str_src : return PIXIS
+    elif ':Epix10ka2M.'     in str_src : return EPIX10KA2M
     else                               : return UNDEFINED
 
 #------------------------------
